[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpdex" 
version = "0.1.0"
description = "Multi Perp DEX base class and exchange wrappers"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "aiohttp>=3.10",
  "pynacl>=1.5",
  "ccxt>=4.4",     
  "eth-hash==0.7.1",
  "lighter-sdk @ git+https://github.com/elliottech/lighter-python.git",
  "grvt-pysdk>=0.1.24",
  "cairo-lang==0.13.5",
]


[tool.setuptools]
# 설치 대상 패키지를 명시적으로 제한하여 keys/, test_exchanges/는 설치 제외
packages = ["mpdex", "wrappers"]
# 루트에 있는 단일 모듈도 함께 배포
py-modules = ["multi_perp_dex", "exchange_factory"]